--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-  <img src="khabribai.png">
-  <video src="bg.mp4">
+  <img height="1" width="1" src="khabribai.png">
+  <img height="1" width="1" src="news-animated.gif">
+  <video height="1" width="1" src="bg.mp4">
   
 </html>
