--- a/banner.html
+++ b/banner.html
@@ -3,7 +3,7 @@
 <title>Khabri Bai Banner</title>
 <body>
 
-<script async src="https://walls.io/js/wallsio-widget-1.2.js" data-wallurl="https://my.walls.io/b445n" data-title="Recognising the Unrecognised." data-width="100%" data-height="800" data-lazyload="1"></script>
+<iframe allowfullscreen id="wallsio-iframe" src="https://my.walls.io/b445n" style="border:0;height:800px;width:100%" loading="lazy" title="Recognising the Unrecognised."></iframe>
 
 </body>
 </html>
