--- a/banner.html
+++ b/banner.html
@@ -2,6 +2,6 @@
 <html>
 <title>Khabri Bai Banner</title>
 <body>
-<iframe allowfullscreen id="wallsio-iframe" src="https://my.walls.io/b445n" style="border:0;height:800px;width:100%" loading="lazy" title="Recognising the Unrecognised."></iframe>
+<iframe allowfullscreen id="wallsio-iframe" src="https://my.walls.io/b445n" style="border:0;height:auto;width:100%" loading="lazy" title="Recognising the Unrecognised."></iframe>
 </body>
 </html>
