--- a/banner.html
+++ b/banner.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Khabri Bai Banner</title>
-<body>
+<body style= "background-color: transparent;" >
 <script async src="https://walls.io/js/wallsio-widget-1.2.js" data-wallurl="https://my.walls.io/b445n" data-title="Recognising the Unrecognised." data-width="100%" data-height="800"></script>
   </body>
 </html>
