--- a/banner.html
+++ b/banner.html
@@ -3,6 +3,6 @@
 <title>Khabri Bai Banner</title>
 <body style= "background-color: transparent;" >
 <!-- <script async src="https://walls.io/js/wallsio-widget-1.2.js" data-wallurl="https://my.walls.io/b445n" data-title="Recognising the Unrecognised." data-width="100%" data-height="800"></script> -->
-  <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ArfIeGzGXpw?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/ArfIeGzGXpw?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
 </html>
