--- a/banner.html
+++ b/banner.html
@@ -10,14 +10,19 @@
     x = win.innerWidth || docElem.clientWidth || body.clientWidth,
     y = win.innerHeight|| docElem.clientHeight|| body.clientHeight;
   
+  var height = Math.max( body.scrollHeight, body.offsetHeight, 
+                       html.clientHeight, html.scrollHeight, html.offsetHeight );
+  var width = Math.max( body.scrollWidth, body.offsetWidth, 
+                       html.clientWidth, html.scrollWidth, html.offsetWidth );
+  
     var script = document.createElement("script");
   
     script.setAttribute('async', '');
     script.setAttribute('src', 'https://walls.io/js/wallsio-widget-1.2.js');
     script.setAttribute('data-wallurl', 'https://my.walls.io/b445n');
     script.setAttribute('data-title', 'Recognising the Unrecognised.');
-     script.setAttribute('data-width', x);
-     script.setAttribute('data-height', y);
+     script.setAttribute('data-width', width);
+     script.setAttribute('data-height', height);
   
     document.body.appendChild(script);
   </script>
