--- a/banner.html
+++ b/banner.html
@@ -10,6 +10,9 @@
     x = win.innerWidth || docElem.clientWidth || body.clientWidth,
     y = win.innerHeight|| docElem.clientHeight|| body.clientHeight;
   
+  var body = document.body,
+    html = document.documentElement;
+  
   var height = Math.max( body.scrollHeight, body.offsetHeight, 
                        html.clientHeight, html.scrollHeight, html.offsetHeight );
   var width = Math.max( body.scrollWidth, body.offsetWidth, 
